# MTL-AliceVision

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTORS.md
CMake/ExternalBridges/JPEG/: CMakeLists.txt
Sources/: CMakeLists.txt
Sources/Binaries/: CMakeLists.txt
Sources/Binaries/Convert/: CMakeLists.txt  main_convertDistortion.cpp  main_convertMesh.cpp  main_convertSfMFormat.cpp  main_importE57.cpp  main_importKnownPoses.cpp
Sources/Binaries/Export/: CMakeLists.txt  main_exportAnimatedCamera.cpp  main_exportColmap.cpp  main_exportColoredPointCloud.cpp  main_exportDistortion.cpp  main_exportKeypoints.cpp  main_exportMVE2.cpp  main_exportMVSTexturing.cpp  main_exportMatches.cpp  main_exportMatlab.cpp  main_exportMeshlab.cpp  main_exportMeshroomMaya.cpp  main_exportPMVS.cpp  main_exportTracks.cpp  main_exportUSD.cpp
Sources/Binaries/Pipeline/: CMakeLists.txt  main_LdrToHdrCalibration.cpp  main_LdrToHdrMerge.cpp  main_LdrToHdrSampling.cpp  main_cameraCalibration.cpp  main_cameraInit.cpp  main_cameraLocalization.cpp  main_checkerboardCalibration.cpp  main_checkerboardDetection.cpp  main_computeStructureFromKnownPoses.cpp  main_depthMapEstimation.cpp  main_depthMapFiltering.cpp  main_distortionCalibration.cpp  main_featureExtraction.cpp  main_featureMatching.cpp  main_globalRotationEstimating.cpp  main_globalSfM.cpp  main_imageMasking.cpp  main_imageMatching.cpp  main_imageSegmentation.cpp  main_incrementalSfM.cpp  main_lidarDecimating.cpp  main_lidarMerging.cpp  main_lidarMeshing.cpp  main_lightingCalibration.cpp  main_meshDecimate.cpp  main_meshDenoising.cpp  main_meshFiltering.cpp  main_meshMasking.cpp  main_meshResampling.cpp  main_meshing.cpp  main_nodalSfM.cpp  main_normalIntegration.cpp  main_panoramaCompositing.cpp  main_panoramaEstimation.cpp  main_panoramaInit.cpp  main_panoramaMerging.cpp  main_panoramaPostProcessing.cpp  main_panoramaPrepareImages.cpp  main_panoramaSeams.cpp  (+12 more)
Sources/Binaries/Utils/: CMakeLists.txt  main_applyCalibration.cpp  main_colorCheckerCorrection.cpp  main_colorCheckerDetection.cpp  main_computeUncertainty.cpp  main_depthMapRendering.cpp  main_exportImages.cpp  main_frustumFiltering.cpp  main_generateSampleScene.cpp  main_hardwareResources.cpp  main_imageProcessing.cpp  main_importAlembic.cpp  main_importMiddlebury.cpp  main_intrinsicsTransforming.cpp  main_keyframeSelection.cpp  main_lightingEstimation.cpp  main_maskProcessing.cpp  main_mergeMeshes.cpp  main_meshRemoveUnseenFaces.cpp  main_normalMapRendering.cpp  main_qualityEvaluation.cpp  main_rigTransform.cpp  main_selectConnectedViews.cpp  main_sfmAlignment.cpp  main_sfmColorHarmonize.cpp  main_sfmColorizing.cpp  main_sfmDistances.cpp  main_sfmFilter.cpp  main_sfmMerge.cpp  main_sfmPoseInjecting.cpp  main_sfmSplitReconstructed.cpp  main_sfmSurveyInjecting.cpp  main_sfmToRig.cpp  main_sfmTransfer.cpp  main_sfmTransform.cpp  main_split360Images.cpp  main_tracksMerging.cpp  main_voctreeCreation.cpp  main_voctreeQueryUtility.cpp  main_voctreeStatistics.cpp  (+1 more)
Sources/Binaries/VectorGraphics/: CMakeLists.txt  main.cpp
Sources/Headers/.AVDepthMap.old/: ComputeOnMultiGPUs.hpp  DepthMapEstimator.hpp  DepthMapParams.hpp  DepthMapUtils.hpp  LRUCameraCache.hpp  NormalMapEstimator.hpp  Refine.hpp  RefineParams.hpp  Sgm.hpp  SgmDepthList.hpp  Tile.hpp  VolumeIO.hpp
Sources/Headers/AV/: bundleHelper.hpp  config.hpp  omp.hpp  precisionEvaluationToGt.hpp  prettyprint.hpp  sfmIOHelper.hpp  sfmPlyHelper.hpp  types.hpp  unitTest.hpp  version.hpp
Sources/Headers/AVCMDLine/: cmdline.hpp
Sources/Headers/AVCalibration/: checkerDetector.hpp  checkerDetector_io.hpp  distortionEstimation.hpp  distortionEstimationGeometry.hpp  distortionEstimationLine.hpp  distortionEstimationPoint.hpp  exportData.hpp  patternDetect.hpp
Sources/Headers/AVCamera/: Distortion.hpp  DistortionBrown.hpp  DistortionFisheye.hpp  DistortionFisheye1.hpp  DistortionRadial.hpp  Equidistant.hpp  Equirectangular.hpp  IntrinsicBase.hpp  IntrinsicScaleOffset.hpp  IntrinsicScaleOffsetDisto.hpp  Pinhole.hpp  Undistortion.hpp  Undistortion3DEA4.hpp  Undistortion3DEClassicLD.hpp  Undistortion3DERadial4.hpp  UndistortionRadial.hpp  camera.hpp  cameraCommon.hpp  cameraUndistortImage.hpp
Sources/Headers/AVColorHarmonization/: CommonDataByPair.hpp  CommonDataByPair_fullFrame.hpp  CommonDataByPair_matchedPoints.hpp  CommonDataByPair_vldSegment.hpp  GainOffsetConstraintBuilder.hpp
Sources/Headers/AVDataIO/: E57Reader.hpp  FeedProvider.hpp  IFeed.hpp  ImageFeed.hpp  SfMDataFeed.hpp  VideoFeed.hpp  json.hpp
Sources/Headers/AVDepthMap/: BufPtr.hpp  DepthMapEstimator.hpp  NormalMapEstimator.hpp  Refine.hpp  Sgm.hpp  computeOnMultiGPUs.hpp  depthMapUtils.hpp  volumeIO.hpp
Sources/Headers/AVDepthMapVulkanKernels/: AVDepthMapVulkanKernels.hpp  DeviceCameraParams.comp  DevicePatchPattern.comp  Eig33.comp  Matrix.comp  Patch.comp  ROI.comp  SimStat.comp  Stat3D.comp  color.comp  color_float.comp  color_half.comp  definitions.comp
Sources/Headers/AVFeature/: Descriptor.hpp  FeaturesPerView.hpp  Hamming.hpp  ImageDescriber.hpp  KeypointSet.hpp  PointFeature.hpp  Regions.hpp  RegionsPerView.hpp  feature.hpp  imageDescriberCommon.hpp  imageStats.hpp  metric.hpp  regionsFactory.hpp
Sources/Headers/AVFeatureEngine/: FeatureExtractor.hpp
Sources/Headers/AVFuseCut/: BoundingBox.hpp  Fuser.hpp  GraphFiller.hpp  Intersections.hpp  Kdtree.hpp  MaxFlow_AdjList.hpp  Mesher.hpp  Octree.hpp  PointCloud.hpp  Tetrahedralization.hpp  delaunayGraphCutTypes.hpp
Sources/Headers/AVGPU/: gpu.hpp
Sources/Headers/AVGeometry/: Frustum.hpp  HalfPlane.hpp  Intersection.hpp  Pose3.hpp  Similarity3.hpp  rigidTransformation3D.hpp
Sources/Headers/AVGraph/: Triplet.hpp  connectedComponent.hpp  graph.hpp
Sources/Headers/AVHDR/: DebevecCalibrate.hpp  GrossbergCalibrate.hpp  LaguerreBACalibration.hpp  brackets.hpp  hdrMerge.hpp  hdrTestCommon.hpp  rgbCurve.hpp  sampling.hpp
Sources/Headers/AVImage/: Image.hpp  Sampler.hpp  all.hpp  cache.hpp  concat.hpp  conversion.hpp  conversionOpenCV.hpp  convolution.hpp  dcp.hpp  io.hpp  (+8 more)
Sources/Libraries/: CMakeLists.txt
(+1188 files in other folders)
